--- a/1.2
+++ b/1.2
@@ -1,18 +1,24 @@
-<body>
-  <h1>Lunch Box</h1>
-  <div id="about">
-    <h2>About Us</h2>
-      <p>----Stuff about company---</p>
-    <h3>Menu</h3>
-    <h3>Contact</h3>
-      <p>Address and stuff.</p>
-  </div>
-  <div id="Shopping">
-    <h2>Cart</h2>
-    <h3>Products</h3>
-    <h3>Prices</h3>
-      <p> put prices here</p>
-  <div id="axtra">
-    <h2>extraMedia</h2>
-  </div>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Lunch Box</title>
+  </head>
+  <body>
+    <h1>Lunch Box</h1>
+    <div id="about">
+      <h2>About Us</h2>
+        <p>----Stuff about company---</p>
+      <h3>Menu</h3>
+      <h3>Contact</h3>
+        <p>Address and stuff.</p>
+    </div>
+    <div id="Shopping">
+      <h2>Cart</h2>
+      <h3>Products</h3>
+      <h3>Prices</h3>
+        <p> put prices here</p>
+    <div id="axtra">
+      <h2>extraMedia</h2>
+    </div>
+  </body>
+</html>
